# i-want-to-hunt

./: .gitignore  README.md  helpers.py  main.py  models.py  pyproject.toml
cli/: monsterhelper.py
cli/example/: mhwpreiceborne.json
requests/: create_monster.http
