[tool.poetry]
name = "fastapi-mh"
version = "0.1.0"
description = ""
authors = ["andrew-jung"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.46.0"
black = "^19.10b0"
sqlalchemy = "^1.3.12"
databases = "^0.2.6"
aiosqlite = "^0.11.0"
fire = "^0.2.1"
httpx = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
